Update popup HTML structure and styles for improved UI

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,13 +3,15 @@
 <head>
     <title>YouTube Quiz Generator</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h2>YouTube Quiz Generator</h2>
+        <h2>Quiz Generator</h2>
         <div id="current-url"></div>
-        <button id="generate-quiz">Generate Quiz</button>
+        <button id="generate-quiz">
+            <span>Generate Quiz</span>
+        </button>
         <div id="status"></div>
         <pre id="quiz-result"></pre>
     </div>
